# slim

./: README.md  pyproject.toml
pnnl_slim/: __init__.py  linear.py  rnn.py
tests/: test_dims.py  test_maps.py
