[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slim"
authors = [
    { name = "Aaron Tuor", email = "todo@pnnl.gov" },
    { name = "Jan Drgona", email = "todo@pnnl.gov" },
    { name = "Elliot Skomski", email = "todo@pnnl.gov" },
]

description = "Constrained linear map parametrizations in PyTorch"

readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Deep Learning",
    "Pytorch",
    "Linear Models",
]
dependencies = ["torch"]


dynamic = ["version"]

[tool.setuptools]
packages = ["slim"]
zip-safe = false
