[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pnnl-slim"
authors = [
    { name = "Aaron Tuor", email = "aaron.tuor@pnnl.gov" },
    { name = "Jan Drgona", email = "jan.drgona@pnnl.gov" },
    { name = "Elliot Skomski", email = "elliot.skomski@pnnl.gov" },
]

description = "Constrained linear map parametrizations in PyTorch"

readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = ["Deep Learning", "Pytorch", "Linear Models"]

dependencies = ["torch"]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "pnnl_slim.__version__" }

[tool.setuptools]
packages = ["pnnl_slim"]
zip-safe = false
